# Placement

./: CMakeLists.txt  Lab3  Makefile  README.md
data/: case4.txt
examples/: CMakeLists.txt  example_lab3.cpp
scripts/: boost.sh
src/placement/: CMakeLists.txt  Lab3.hpp  graph_partition.hpp  input.hpp  legalization_abacus.hpp  output.hpp  system.hpp
